# distSystemsShopApp

./: .gitignore  README.md  docker-compose-traefik.yml  docker-compose.yml
frontendFlask/: app.py
frontendFlask/templates/: shopping.html
frontendflask/: Dockerfile
k8s/: frontend-deployment.yaml  ingress.yaml  postgres-deployment.yaml  rustshop-deployment.yaml
shop/: Cargo.toml  Dockerfile  REST_API.yaml  Rocket.toml  shop.db
shop/migrations/: 20250421095113_init.sql  init.sql
shop/src/: main.rs
